fixing performance on mobile

--- a/style.css
+++ b/style.css
@@ -20,6 +20,13 @@ button {
     font-family: "Avenir Next";
 }
 
+h1 {
+    font-size: 2.75em;
+    font-weight: 600;
+    margin-top:15px;
+    margin-bottom:10px;
+}
+
 h2 {
     font-size: 2.2em;
     font-weight: 600;
